@@ -1994,6 +1994,7 @@ CREATE TABLE host (
   location varchar(40) default NULL,
   notes text,
   external_id varchar(40) default NULL,
+  snmp_options tinyint(3) unsigned NOT NULL default '0',
   snmp_community varchar(100) default NULL,
   snmp_version tinyint(3) unsigned NOT NULL default '1',
   snmp_username varchar(50) default NULL,
@@ -2027,6 +2028,7 @@ CREATE TABLE host (
   status_event_count mediumint(8) unsigned NOT NULL default '0',
   status_fail_date timestamp NOT NULL default '0000-00-00 00:00:00',
   status_rec_date timestamp NOT NULL default '0000-00-00 00:00:00',
+  status_options_date timestamp NOT NULL default '0000-00-00 00:00:00',
   status_last_error varchar(255) default '',
   min_time decimal(10,5) default '9.99999',
   max_time decimal(10,5) default '0.00000',
