@@ -696,50 +696,52 @@ INSERT INTO `table_columns` VALUES ('host',6,'hostname','varchar(100)','YES','MU
 INSERT INTO `table_columns` VALUES ('host',7,'location','varchar(40)','YES','',NULL,'');
 INSERT INTO `table_columns` VALUES ('host',8,'notes','text','YES','',NULL,'');
 INSERT INTO `table_columns` VALUES ('host',9,'external_id','varchar(40)','YES','MUL',NULL,'');
-INSERT INTO `table_columns` VALUES ('host',10,'snmp_community','varchar(100)','YES','',NULL,'');
-INSERT INTO `table_columns` VALUES ('host',11,'snmp_version','tinyint(3) unsigned','NO','','1','');
-INSERT INTO `table_columns` VALUES ('host',12,'snmp_username','varchar(50)','YES','',NULL,'');
-INSERT INTO `table_columns` VALUES ('host',13,'snmp_password','varchar(50)','YES','',NULL,'');
-INSERT INTO `table_columns` VALUES ('host',14,'snmp_auth_protocol','char(6)','YES','','','');
-INSERT INTO `table_columns` VALUES ('host',15,'snmp_priv_passphrase','varchar(200)','YES','','','');
-INSERT INTO `table_columns` VALUES ('host',16,'snmp_priv_protocol','char(7)','YES','','','');
-INSERT INTO `table_columns` VALUES ('host',17,'snmp_context','varchar(64)','YES','','','');
-INSERT INTO `table_columns` VALUES ('host',18,'snmp_engine_id','varchar(64)','YES','','','');
-INSERT INTO `table_columns` VALUES ('host',19,'snmp_port','mediumint(8) unsigned','NO','','161','');
-INSERT INTO `table_columns` VALUES ('host',20,'snmp_timeout','mediumint(8) unsigned','NO','','500','');
-INSERT INTO `table_columns` VALUES ('host',21,'snmp_sysDescr','varchar(300)','NO','','','');
-INSERT INTO `table_columns` VALUES ('host',22,'snmp_sysObjectID','varchar(128)','NO','','','');
-INSERT INTO `table_columns` VALUES ('host',23,'snmp_sysUpTimeInstance','bigint(20) unsigned','NO','','0','');
-INSERT INTO `table_columns` VALUES ('host',24,'snmp_sysContact','varchar(300)','NO','','','');
-INSERT INTO `table_columns` VALUES ('host',25,'snmp_sysName','varchar(300)','NO','','','');
-INSERT INTO `table_columns` VALUES ('host',26,'snmp_sysLocation','varchar(300)','NO','','','');
-INSERT INTO `table_columns` VALUES ('host',27,'availability_method','smallint(5) unsigned','NO','','1','');
-INSERT INTO `table_columns` VALUES ('host',28,'ping_method','smallint(5) unsigned','YES','','0','');
-INSERT INTO `table_columns` VALUES ('host',29,'ping_port','int(10) unsigned','YES','','0','');
-INSERT INTO `table_columns` VALUES ('host',30,'ping_timeout','int(10) unsigned','YES','','500','');
-INSERT INTO `table_columns` VALUES ('host',31,'ping_retries','int(10) unsigned','YES','','2','');
-INSERT INTO `table_columns` VALUES ('host',32,'max_oids','int(10) unsigned','YES','','10','');
-INSERT INTO `table_columns` VALUES ('host',33,'bulk_walk_size','int(11)','YES','','-1','');
-INSERT INTO `table_columns` VALUES ('host',34,'device_threads','tinyint(3) unsigned','NO','','1','');
-INSERT INTO `table_columns` VALUES ('host',35,'deleted','char(2)','NO','','','');
-INSERT INTO `table_columns` VALUES ('host',36,'disabled','char(2)','NO','MUL','','');
-INSERT INTO `table_columns` VALUES ('host',37,'graphs','int(10) unsigned','NO','','0','');
-INSERT INTO `table_columns` VALUES ('host',38,'data_sources','int(10) unsigned','NO','','0','');
-INSERT INTO `table_columns` VALUES ('host',39,'status','tinyint(3) unsigned','NO','MUL','0','');
-INSERT INTO `table_columns` VALUES ('host',40,'status_event_count','mediumint(8) unsigned','NO','','0','');
-INSERT INTO `table_columns` VALUES ('host',41,'status_fail_date','timestamp','NO','','0000-00-00 00:00:00','');
-INSERT INTO `table_columns` VALUES ('host',42,'status_rec_date','timestamp','NO','','0000-00-00 00:00:00','');
-INSERT INTO `table_columns` VALUES ('host',43,'status_last_error','varchar(255)','YES','','','');
-INSERT INTO `table_columns` VALUES ('host',44,'min_time','decimal(10,5)','YES','','9.99999','');
-INSERT INTO `table_columns` VALUES ('host',45,'max_time','decimal(10,5)','YES','','0.00000','');
-INSERT INTO `table_columns` VALUES ('host',46,'cur_time','decimal(10,5)','YES','','0.00000','');
-INSERT INTO `table_columns` VALUES ('host',47,'avg_time','decimal(10,5)','YES','','0.00000','');
-INSERT INTO `table_columns` VALUES ('host',48,'polling_time','double','YES','','0','');
-INSERT INTO `table_columns` VALUES ('host',49,'total_polls','int(10) unsigned','YES','','0','');
-INSERT INTO `table_columns` VALUES ('host',50,'failed_polls','int(10) unsigned','YES','','0','');
-INSERT INTO `table_columns` VALUES ('host',51,'availability','decimal(8,5)','NO','','100.00000','');
-INSERT INTO `table_columns` VALUES ('host',52,'last_updated','timestamp','NO','','CURRENT_TIMESTAMP','ON UPDATE CURRENT_TIMESTAMP');
-INSERT INTO `table_columns` VALUES ('host',53,'created','timestamp','YES','','CURRENT_TIMESTAMP','');
+INSERT INTO `table_columns` VALUES ('host',10,'snmp_options','tinyint(3) unsigned','NULL','','0','');
+INSERT INTO `table_columns` VALUES ('host',11,'snmp_community','varchar(100)','YES','',NULL,'');
+INSERT INTO `table_columns` VALUES ('host',12,'snmp_version','tinyint(3) unsigned','NO','','1','');
+INSERT INTO `table_columns` VALUES ('host',13,'snmp_username','varchar(50)','YES','',NULL,'');
+INSERT INTO `table_columns` VALUES ('host',14,'snmp_password','varchar(50)','YES','',NULL,'');
+INSERT INTO `table_columns` VALUES ('host',15,'snmp_auth_protocol','char(6)','YES','','','');
+INSERT INTO `table_columns` VALUES ('host',16,'snmp_priv_passphrase','varchar(200)','YES','','','');
+INSERT INTO `table_columns` VALUES ('host',17,'snmp_priv_protocol','char(7)','YES','','','');
+INSERT INTO `table_columns` VALUES ('host',18,'snmp_context','varchar(64)','YES','','','');
+INSERT INTO `table_columns` VALUES ('host',19,'snmp_engine_id','varchar(64)','YES','','','');
+INSERT INTO `table_columns` VALUES ('host',20,'snmp_port','mediumint(8) unsigned','NO','','161','');
+INSERT INTO `table_columns` VALUES ('host',21,'snmp_timeout','mediumint(8) unsigned','NO','','500','');
+INSERT INTO `table_columns` VALUES ('host',22,'snmp_sysDescr','varchar(300)','NO','','','');
+INSERT INTO `table_columns` VALUES ('host',23,'snmp_sysObjectID','varchar(128)','NO','','','');
+INSERT INTO `table_columns` VALUES ('host',24,'snmp_sysUpTimeInstance','bigint(20) unsigned','NO','','0','');
+INSERT INTO `table_columns` VALUES ('host',25,'snmp_sysContact','varchar(300)','NO','','','');
+INSERT INTO `table_columns` VALUES ('host',26,'snmp_sysName','varchar(300)','NO','','','');
+INSERT INTO `table_columns` VALUES ('host',27,'snmp_sysLocation','varchar(300)','NO','','','');
+INSERT INTO `table_columns` VALUES ('host',28,'availability_method','smallint(5) unsigned','NO','','1','');
+INSERT INTO `table_columns` VALUES ('host',29,'ping_method','smallint(5) unsigned','YES','','0','');
+INSERT INTO `table_columns` VALUES ('host',30,'ping_port','int(10) unsigned','YES','','0','');
+INSERT INTO `table_columns` VALUES ('host',31,'ping_timeout','int(10) unsigned','YES','','500','');
+INSERT INTO `table_columns` VALUES ('host',32,'ping_retries','int(10) unsigned','YES','','2','');
+INSERT INTO `table_columns` VALUES ('host',33,'max_oids','int(10) unsigned','YES','','10','');
+INSERT INTO `table_columns` VALUES ('host',34,'bulk_walk_size','int(11)','YES','','-1','');
+INSERT INTO `table_columns` VALUES ('host',35,'device_threads','tinyint(3) unsigned','NO','','1','');
+INSERT INTO `table_columns` VALUES ('host',36,'deleted','char(2)','NO','','','');
+INSERT INTO `table_columns` VALUES ('host',37,'disabled','char(2)','NO','MUL','','');
+INSERT INTO `table_columns` VALUES ('host',38,'graphs','int(10) unsigned','NO','','0','');
+INSERT INTO `table_columns` VALUES ('host',39,'data_sources','int(10) unsigned','NO','','0','');
+INSERT INTO `table_columns` VALUES ('host',40,'status','tinyint(3) unsigned','NO','MUL','0','');
+INSERT INTO `table_columns` VALUES ('host',41,'status_event_count','mediumint(8) unsigned','NO','','0','');
+INSERT INTO `table_columns` VALUES ('host',42,'status_fail_date','timestamp','NO','','0000-00-00 00:00:00','');
+INSERT INTO `table_columns` VALUES ('host',43,'status_rec_date','timestamp','NO','','0000-00-00 00:00:00','');
+INSERT INTO `table_columns` VALUES ('host',44,'status_options_date','timestamp','NO','','0000-00-00 00:00:00','');
+INSERT INTO `table_columns` VALUES ('host',45,'status_last_error','varchar(255)','YES','','','');
+INSERT INTO `table_columns` VALUES ('host',46,'min_time','decimal(10,5)','YES','','9.99999','');
+INSERT INTO `table_columns` VALUES ('host',47,'max_time','decimal(10,5)','YES','','0.00000','');
+INSERT INTO `table_columns` VALUES ('host',48,'cur_time','decimal(10,5)','YES','','0.00000','');
+INSERT INTO `table_columns` VALUES ('host',49,'avg_time','decimal(10,5)','YES','','0.00000','');
+INSERT INTO `table_columns` VALUES ('host',50,'polling_time','double','YES','','0','');
+INSERT INTO `table_columns` VALUES ('host',51,'total_polls','int(10) unsigned','YES','','0','');
+INSERT INTO `table_columns` VALUES ('host',52,'failed_polls','int(10) unsigned','YES','','0','');
+INSERT INTO `table_columns` VALUES ('host',53,'availability','decimal(8,5)','NO','','100.00000','');
+INSERT INTO `table_columns` VALUES ('host',54,'last_updated','timestamp','NO','','CURRENT_TIMESTAMP','ON UPDATE CURRENT_TIMESTAMP');
+INSERT INTO `table_columns` VALUES ('host',55,'created','timestamp','YES','','CURRENT_TIMESTAMP','');
 INSERT INTO `table_columns` VALUES ('host_graph',1,'host_id','mediumint(8) unsigned','NO','PRI','0','');
 INSERT INTO `table_columns` VALUES ('host_graph',2,'graph_template_id','mediumint(8) unsigned','NO','PRI','0','');
 INSERT INTO `table_columns` VALUES ('host_snmp_cache',1,'host_id','mediumint(8) unsigned','NO','PRI','0','');
