@@ -30,6 +30,7 @@ require_once(CACTI_PATH_LIBRARY . '/api_graph.php');
 include_once(CACTI_PATH_LIBRARY . '/poller.php');
 require_once(CACTI_PATH_LIBRARY . '/rrd.php');
 require_once(CACTI_PATH_LIBRARY . '/utility.php');
+require_once(CACTI_PATH_LIBRARY . '/ping.php');
 
 /* let PHP run just as long as it has to */
 ini_set('max_execution_time', '0');
@@ -139,9 +140,15 @@ if ($config['poller_id'] > 1) {
 
 phpversion_check($force);
 
+$stats = device_recovery_sweep();
+
 $end = microtime(true);
 
-cacti_log(sprintf('MAINT STATS: Time:%0.2f', $end - $start), false, 'SYSTEM');
+if ($stats['devices'] > 0) {
+	cacti_log(sprintf('MAINT RECOVERY STATS: Time:%0.2f Checks:%s Recovered:%s', $stats['sweeptime'], $stats['devices'], $stats['recovered']), false, 'SYSTEM');
+}
+
+cacti_log(sprintf('MAINT TOTAL STATS: Time:%0.2f', $end - $start), false, 'SYSTEM');
 
 if (!$force) {
 	unregister_process('maintenance', 'master', $config['poller_id']);
@@ -155,6 +162,107 @@ function purge_host_value_cache() {
 			WHERE time_to_live > 0
 			AND UNIX_TIMESTAMP() - UNIX_TIMESTAMP(last_updated) > time_to_live');
 	}
+}
+
+function device_recovery_sweep() {
+	global $config;
+
+	$start = microtime(true);
+
+	maint_debug("Attempting to Recover Downed Devices using SNMP Options");
+
+	$devices = db_fetch_assoc_prepared('SELECT *
+		FROM host
+		WHERE status = ?
+		AND deleted = ""
+		AND disabled = ""
+		AND snmp_options > 0
+		AND status_options_date < DATE_SUB(NOW(), INTERVAL ? SECOND)
+		AND poller_id = ?',
+		array(HOST_DOWN, read_config_option('snmp_options_retry_interval'), $config['poller_id']));
+
+	$snmp_columns = array(
+		'snmp_version',
+		'snmp_community',
+		'snmp_timeout',
+		'snmp_retries',
+		'snmp_username',
+		'snmp_password',
+		'snmp_auth_protocol',
+		'snmp_priv_protocol',
+		'snmp_prive_passphrase',
+		'snmp_context',
+		'snmp_engine_id'
+	);
+
+	$recovered    = 0;
+	$down_devices = cacti_sizeof($devices);
+
+	if (cacti_sizeof($devices)) {
+		maint_debug(sprintf('Found %s Devices to Recover', cacti_sizeof($devices)));
+
+		$options = db_fetch_assoc('SELECT * FROM automation_snmp_options ORDER BY sequence');
+		$names   = array_rekey(db_fetch_assoc('SELECT * FROM automation_snmp'), 'id', 'name');
+
+		if (cacti_sizeof($options)) {
+			foreach($devices as $d) {
+				$device_up = false;
+
+				foreach($options as $o) {
+					$ping = new Net_Ping;
+
+					$thost = $d;
+
+					foreach($snmp_columns as $c) {
+						$thost[$c] = $o[$c];
+					}
+
+					switch($thost['availability_method']) {
+						case AVAIL_NONE:
+						case AVAIL_PING:
+							$thost['availability_method'] = AVAIL_SNMP;
+							break;
+					}
+
+					$ping->host = $thost;
+					$ping->port = $host['ping_port'];
+
+					if ($ping->ping($thost['availability_method'], $thost['ping_method'], $thost['ping_timeout'], $thost['ping_retries'])) {
+						cacti_log(sprintf("Device[%s] STATUS: Device '%s' brought UP with Options Set [%s]", $thost['id'], $thost['hostname'], $name[$o['snmp_id']]), false, 'RECOVERY');
+
+						$sql        = 'UPDATE host SET ';
+						$sql_params = array();
+
+						foreach($snmp_columns as $i => $c) {
+							$sql         .= ($i > 0 ? ', ':'') . "$c = ?";
+							$sql_params[] = $thost[$c];
+						}
+
+						$sql .= ', status = 3, status_rec_date = NOW() WHERE id = ?';
+						$sql_params[] = $thost['id'];
+
+						db_execute_prepared($sql_prefix, $sql_params);
+
+						$device_up = true;
+						$recovered++;
+
+						break;
+					}
+				}
+
+				if (!$device_up) {
+					cacti_log("Device[" . $thost['id'] ."] STATUS: Device '" . $thost['hostname'] . "' remains Down. No matching Options Sets.", false, 'RECOVERY');
+					db_execute_prepared('UPDATE host SET status_options_date = NOW() WHERE id = ?', array($thost['id']));
+				}
+			}
+		}
+	} else {
+		maint_debug(sprintf('Found 0 Devices to Recover'));
+	}
+
+	$time = microtime(true) - $start;
+
+	return array('devices' => $down_devices, 'recovered' => $recovered, 'sweeptime' => $time);
 }
 
 function update_graphs_data_source_templates_totals($force) {
